# pymemuc

./: .env  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  demo.ipynb  devcontainer.json  memuc_documentation.md  memuc_wrapper.py  pyproject.toml
.github/: dependabot.yml  funding.yml
.github/workflows/: codeql.yml  deploy-pypi.yml  test-docs.yml  tests.yml
demo/: demo.ipynb
docs/: memuc_documentation.md  pymemuc.md  requirements.txt
docs/source/: conf.py  index.rst  pymemuc.rst  quickstart.rst
docs/source/locales/cn/LC_MESSAGES/: index.po  pymemuc.mo  quickstart.mo  quickstart.po
docs/source/locales/en/LC_MESSAGES/: index.mo  index.po  pymemuc.mo  pymemuc.po  quickstart.po
docs/source/locales/ru/LC_MESSAGES/: index.mo  index.po  pymemuc.mo  pymemuc.po  quickstart.mo  quickstart.po
docs/source/locales/zh/LC_MESSAGES/: index.mo  index.po  pymemuc.mo  pymemuc.po
docs/source/tables/: vm_config_keys.csv
pymemuc/: __init__.py  __main__.py  _command.py  _constants.py  _control.py  _decorators.py  _manage.py  _memuc.py  exceptions.py  pymemuc.py  types.py  vminfo.py
