[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymemuc"
version = "v0.0.0"
description = "A Python API for MEmu Android Emulator."
readme = "README.md"
authors = ["Martin Miglio <code@martinmiglio.dev>"]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["memu", "memuc", "android-emulator", "api"]
repository = "https://github.com/martinmiglio/pymemuc"
documentation = "https://pymemuc.martinmiglio.dev/"


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
black = "^23.1.0"
prospector = "^1.9.0"
ipykernel = "^6.22.0"


[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3,<8.0.0"
sphinxext-opengraph = "^0.8.1"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.1"
furo = "^2023.3.27"
sphinx-intl = "^2.1.0"


[tool.poetry.group.tests.dependencies]
twine = "^4.0.2"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.isort]
profile = "black"


[tool.pylint.main]
ignore = ["docs/source"]
py-version = "3.11"
suggestion-mode = true
disable = [
  "C0301", # line-too-long
  "W0622", # redefined-builtin
  "R0903", # too-few-public-methods
  "C0412", # ungrouped-imports
]
